--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -106,6 +106,11 @@ a {
   background: white;
   box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.15) !important;
   padding: 20px;
+  margin: 15px 1px;
   border-radius: 10px;
+}
+
+.search-result__action {
+  margin-top: 2rem;
 }
 /*# sourceMappingURL=main.css.map */
