--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -27,7 +27,7 @@ a {
     display        : flex;
     justify-content: center;
     align-items    : center;
-    margin-bottom  : 2rem;  
+    margin-bottom  : 2rem;
 
     &__col {
         padding: 0;
@@ -119,8 +119,13 @@ a {
 
     &__col {
         background   : white;
-        box-shadow   : $basicShadow;
+        box-shadow   : 0 0.5rem 1rem rgba(0, 0, 0, 0.15) !important;
         padding      : 20px;
+        margin       : 15px 1px;
         border-radius: 10px;
+    }
+
+    &__action {
+        margin-top: 2rem;
     }
 }
