--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -110,6 +110,60 @@ a {
         padding      : 20px;
         border-radius: 10px;
     }
+
+    .form-check {
+        padding: 0;
+    }
+
+    .checkbox-btn {
+        position: relative
+    }
+
+    .checkbox-btn input {
+        position: absolute;
+        z-index : -1;
+        opacity : 0
+    }
+
+    .checkbox-btn input:checked~.btn {
+        border-color    : #3167eb;
+        background-color: #3167eb;
+        color           : #fff
+    }
+
+    .btn-light {
+        display         : inline-block;
+        font-weight     : 600;
+        color           : #343a40;
+        text-align      : center;
+        vertical-align  : middle;
+        user-select     : none;
+        background-color: #eee;
+        font-size       : 10px;
+        line-height     : 1.5;
+        border-radius   : 0.37rem;
+    }
+
+    .btn-light:hover {
+        background-color: #fff;
+        border-color    : #989898
+    }
+
+    .btn-medium {
+        font-size     : 12px;
+        padding       : 10px 22px;
+        display       : inline-block;
+        margin-right  : 20px;
+        letter-spacing: 2px;
+        border        : 1px solid #157af6;
+        width         : 100%
+    }
+
+    .highlight-button:hover {
+        background-color: #157af6;
+        border          : 2px solid #157af6;
+        color           : #fff
+    }
 }
 
 .search-result {
