--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -96,6 +96,13 @@ a {
   border-radius: 10px;
 }
 
+.search-info__input {
+  height: 46px;
+  border-radius: 10px;
+  box-shadow: 0 0.5rem 1rem #00000026 !important;
+  border: 0;
+}
+
 .search-info .form-check {
   padding: 0;
 }
