--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -111,6 +111,13 @@ a {
         border-radius: 10px;
     }
 
+    &__input {
+        height       : 46px;
+        border-radius: 10px;
+        box-shadow   : 0 0.5rem 1rem #00000026 !important;
+        border       : 0;
+    }
+
     .form-check {
         padding: 0;
     }
